--- a/.gitignore
+++ b/.gitignore
@@ -414,3 +414,11 @@ references/bioimpedancelab
 software/AD5933_DataStream
 references/bioimpedancelab
 software/AD5933_DataStream
+PCB-multi-layer/Zillion
+PCB-multi-layer/Remote-control-block
+PCB-multi-layer/MotorControlBoard
+PCB-multi-layer/Mircod_TEST
+PCB-multi-layer/Mircod_TEST
+PCB-multi-layer/MotorControlBoard
+PCB-multi-layer/Remote-control-block
+PCB-multi-layer/Zillion
