--- a/.gitignore
+++ b/.gitignore
@@ -422,3 +422,9 @@ PCB-multi-layer/Mircod_TEST
 PCB-multi-layer/MotorControlBoard
 PCB-multi-layer/Remote-control-block
 PCB-multi-layer/Zillion
+PCB-multi-layer/bldcmoter
+PCB-multi-layer/dangerous-prototypes-open-hardware
+PCB-multi-layer/bldcmoter
+PCB-multi-layer/dangerous-prototypes-open-hardware
+PCB-multi-layer/bldcmoter
+PCB-multi-layer/bldcmoter
