--- a/.gitignore
+++ b/.gitignore
@@ -428,3 +428,5 @@ PCB-multi-layer/bldcmoter
 PCB-multi-layer/dangerous-prototypes-open-hardware
 PCB-multi-layer/bldcmoter
 PCB-multi-layer/bldcmoter
+PCB-multi-layer/bldcmoter
+PCB-multi-layer/bldcmoter
