--- a/.gitignore
+++ b/.gitignore
@@ -430,3 +430,5 @@ PCB-multi-layer/bldcmoter
 PCB-multi-layer/bldcmoter
 PCB-multi-layer/bldcmoter
 PCB-multi-layer/bldcmoter
+PCB-multi-layer/bldcmoter
+PCB-multi-layer/bldcmoter
